# Swap-Spot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: config.py  main.py
app/api/: routes_alerts.py  routes_rates.py  websocket.py
app/models/: alert.py  exchange_rate.py
app/schemas/: alert.py  rate.py
app/services/: alert_service.py  forecast_engine.py  rate_service.py  scheduler.py  timing_engine.py
app/sources/: aggregator.py  base.py  ecos.py  hanabank.py  koreaexim.py
app/utils/: business_hours.py  currency.py
scripts/: full_test.py  seed_demo.py  seed_real_history.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: conftest.py  test_api.py  test_schemas.py  test_utils.py
tests/test_services/: test_forecast_engine.py  test_rate_service.py  test_timing_engine.py
tests/test_sources/: test_aggregator.py
